--- a/404.html
+++ b/404.html
@@ -28,7 +28,7 @@
     <main id="main">
         <section class="error">
         <img src="images/event_54339_original.jpeg" alt="Diag image at University of Michigan">
-        <p>But don't worry—we're trained in human-centered problem solving. Let's get you back on track!</p>
+        <h2>But don't worry—we're trained in human-centered problem solving. Let's get you back on track!</h2>
         <div>
             <h3><a href ="maizenblue.html">Explore Maize & Blue Cupboard</a></h3>
             <h3><a href="cew.html">Find opportunities at CEW</a></h3>
